<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RadioAlert</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hint_message">Alarm Clock!</string>
    <string name="start_message">Start!</string>
    <string name="send_mail">Send E-Mail</string>
    <string name="notification">It is time to PineWave!</string>
    <string name="listen_message">Listen Now!</string>
    <string name="wait_message">Listen to Later</string>
    <string name="my_alarm_label">Alarm</string>


    <string name="now_playing">Now playing</string>
    <string name="dj">DJ:</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="loading">Loading</string>


    <string name="label_choose">You choose: </string>
    <string name="share_send">Send Email</string>
    <string name="share_broadcast">Let\'s listen to PineWave</string>

    <string-array name="selection">
        <item>Listen right now</item>
        <item>Reservation</item>
        <item>Choose to listen</item>
        <item>Share for friends</item>
        <item>Update program table</item>
        <item>Return home</item>
    </string-array>

    <string-array name="share">
        <item>Choose a mode</item>
        <item>Share by email</item>
        <item>Share by SMS</item>
        <item>Share by facebook</item>
    </string-array>



    <string name="live">Live</string>


    <!-- wind -->
    <string name="app_label">PineWave Radio</string>
    <string name="menu_play_music">Play Music</string>
    <string name="menu_about">About</string>
    <string name="menu_exit">Exit</string>

    <string name="play_music_message">Please choose another one.</string>
    <string name="about_message">Made by Team 11!</string>

    <string name="time_to_play">"您預定的%s時間到了\n請問您要收聽嗎?"</string>

</resources>