<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <TextView
        android:id="@+id/notificationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/notification" />
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/notificationTextView"
        android:gravity="center" >
        
        <Button
        android:id="@+id/listenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listen_message" />
    
    <Button
        android:id="@+id/waitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wait_message" />
    
    </LinearLayout> 

</RelativeLayout>