<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RadioActivity" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="20dp" >

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/now_playing" />

            <TextView
                android:id="@+id/textView_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="[name]" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dj" />

            <TextView
                android:id="@+id/textView_DJ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="[dj]" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tableLayout1"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:clickable="false"
        android:onClick="start"
        android:text="@string/play" />

    <Button
        android:id="@+id/button_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="36dp"
        android:layout_toRightOf="@+id/button_start"
        android:clickable="false"
        android:onClick="stop"
        android:text="@string/stop" />

    <Button
        android:id="@+id/button_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_start"
        android:layout_alignBottom="@+id/button_start"
        android:layout_toRightOf="@+id/button_stop"
        android:clickable="false"
        android:onClick="pause"
        android:text="@string/pause" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_start"
        android:layout_alignRight="@+id/button_pause"
        android:layout_centerVertical="true" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/progressBar2"
        android:layout_marginBottom="23dp"
        android:layout_toLeftOf="@+id/button_pause" />

    <TextView
        android:id="@+id/textView_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_pause"
        android:layout_alignTop="@+id/tableLayout1"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="15dp"
        android:text="@string/loading"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>